# straindesign

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  Update_version.md  __init__.py  benchmark_compression.py  benchmark_simple.py  cMCS_enumerator.py  cMCS_enumerator_test.py  environment.yml  metatool_example_no_ext.xml  profile_compression.py  pyproject.toml  requirements.txt  setup.py  test_455_mcs.py  test_compress.py  test_compress_simple.py  test_fast_fail.py  test_fva_expansion.py  test_fva_mismatch.py  test_fva_validation.py  test_quick_fva.py  test_unified_compression_fva.py  unified_compression.py  unified_compression_integration.py
.github/: style.yapf  update_version.py
checks/: check_mcs_modue.py
conda-recipe/: meta.yaml
docs/: doc_requirements.txt  index.md
efmlrs/: __init__.py  _version.py  post.py  pre.py  quickcheck_sbml.py
examples/: 01_mcs_test_iML1515core.py  02_mcs_test_e_coli_core.py  02_mcs_test_e_coli_core.sd  03_benchmark_ECC2_23BDO.py  04_ECC2comp_example.py  05_gpr_test.py  06_ECC2_Optknock.py  07_Small_Example_KIs.py  08_ECC_optcouple.py  09_yield_opt.py  10_pfba.py  11_compression.py  12_plot_strain_design.py  13_strain_design.py  A_eq.tsv  A_ineq.tsv  ECC2.sbml  ECC2_23BDO.sbml  ECC2comp.ipynb  ECC2comp.sbml  ECC2comp_example.py  JN_01_flux_and_yield_optimization.ipynb  JN_01_milp_test.ipynb  JN_02_flux_and_yield_space.ipynb  JN_02_mcs_test.ipynb  JN_03_ECC2comp.ipynb  JN_08_mcs_test.ipynb  SmallExample.sbml  b_eq.tsv  b_ineq.tsv  e_coli_benchmark.py  efmlrs.sbml  gpr_model.sbml  gpr_test.py  iML1515core.sbml  mcs_test.ipynb  mcs_test.py  mcs_test_colicore.py  (+10 more)
(+288 files in other folders)
